--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,24 @@
+@import "reset.css";
+@import "login.css";
+@import "momentum.css";
+
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+}
+
+#main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
+
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 img {
