--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,31 @@ body {
   display: none !important;
 }
 
+@keyframes hideSplashScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+#splash-screen {
+  background: linear-gradient(0.25turn, lightblue, lightpink);
+  color: white;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 100px;
+  animation: hideSplashScreen 0.5s ease-in-out forwards;
+  animation-delay: 1s;
+}
+
 img {
   position: absolute;
   width: 100vw;
